--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
     "google-auth-library": "^6.1.3",
     "http-errors": "~1.6.3",
+    "jwks-rsa": "^1.11.0",
     "morgan": "~1.9.1",
     "pg": "^8.5.1"
   }
