--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "jwks-rsa": "^1.11.0",
     "morgan": "~1.9.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "uuid": "^8.3.1"
   }
 }
