--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "outDir": "./built",
     "target": "es5",
     "lib": [
       "dom",
@@ -21,6 +22,6 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "./src/**/*"
   ]
 }
