--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 /server/node_modules
 /client/node_modules
-.DS_Store
 /server/.env
 /client/.env
 /server/coverage
 /client/coverage
 /client/build
+.DS_Store
+/server/*/.DS_Store
+/client/*/.DS_Store
+*/.DS_Store
