add missing client environ vars

--- a/client/.example.env
+++ b/client/.example.env
@@ -1,2 +1,10 @@
-REACT_APP_AUTH0_DOMAIN = ''
-REACT_APP_AUTH0_CLIENT_ID = ''
+REACT_APP_GOOGLE_CLIENT_ID = 'UPDATE_GOOGLE_PROJECT_CLIENT_ID'
+AuthorizeURL = 'https://accounts.google.com/o/oauth2/v2/auth'
+TokenURL = 'https://www.googleapis.com/oauth2/v4/token'
+BaseURL = 'http://localhost:3001'
+PORT = '3001'
+REACT_APP_AUTH0_DOMAIN = 'UPDATE_AUTH0_DOMAIN'
+REACT_APP_AUTH0_CLIENT_ID = 'UPDATE_AUTH0_CLIENT_ID'
+REACT_APP_AUTH0_AUDIENCE= 'UPDATE_BACKEND_SERVER_URL'
+REACT_APP_SERVER_URL= 'UPDATE_BACKEND_SERVER_URL'
+DISABLE_NEW_JSX_TRANSFORM=true
