--- a/server/.env.example
+++ b/server/.env.example
@@ -1,15 +1,18 @@
 JWT_SECRET=''
-DB_USER=''
-DB_HOST='localhost'
-DB_DATABASE='DB_NAME'
-DB_PASSWORD=''
-DB_PORT=5432
+#DB_USER=''
+#DB_HOST='localhost'
+#DB_DATABASE='job_tracker_db'
+#DB_PASSWORD=''
+#DB_PORT=5432
 API_ROOT='http://localhost:3000/api/'
-CLIENT_ROOT='http://localhost:1234'
 NODE_ENV=''
-PGUSER=''
-PGHOST='localhost'
-PGPASSWORD=''
-PGDATABASE='DB_NAME'
+PGUSER='UPDATE_DB_USERNAME'
+PGHOST='UPDATE_DB_HOST'
+PGPASSWORD='UPDATE_DB_PASSWORD'
+PGDATABASE='UPDATE_DB_NAME'
 PGPORT=5432
 PGMAXCONNECTIONS=5
+GOOGLE_CLIENT_ID = 'UPDATE_GOOGLE_CLIENT_ID'
+AUTH0_DOMAIN = 'UPDATE_AUTH0_DOMAIN'
+AUTH0_AUDIENCE='UPDATE_BACKEND_SERVER_URL'
+CLIENT_ORIGIN_URL='UPDATE_FRONTEND_SERVER_URL'
