cleanup sample server env vars

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,3 @@
-JWT_SECRET=''
-#DB_USER=''
-#DB_HOST='localhost'
-#DB_DATABASE='job_tracker_db'
-#DB_PASSWORD=''
-#DB_PORT=5432
 API_ROOT='http://localhost:3000/api/'
 NODE_ENV=''
 PGUSER='UPDATE_DB_USERNAME'
@@ -14,5 +8,5 @@ PGPORT=5432
 PGMAXCONNECTIONS=5
 GOOGLE_CLIENT_ID = 'UPDATE_GOOGLE_CLIENT_ID'
 AUTH0_DOMAIN = 'UPDATE_AUTH0_DOMAIN'
-AUTH0_AUDIENCE='UPDATE_BACKEND_SERVER_URL'
-CLIENT_ORIGIN_URL='UPDATE_FRONTEND_SERVER_URL'
+AUTH0_AUDIENCE='http://localhost:3000'
+CLIENT_ORIGIN_URL='https://localhost:3001'
