add scripts for heroku build

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "heroku-postbuild": "cd ./server && npm install && cd ../client && npm install && npm run build && cd ../server ",
+    "start": "node --inspect=9229 ./server/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cch5ng",
