--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "heroku-postbuild": "cd ./server && npm install && cd ../client && npm install && npm run build && cd ../server ",
-    "start": "node --inspect=9229 ./server/bin/www",
+    "start": "node --inspect=9229 ./server/src/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "cch5ng",
