--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "http-errors": "~1.6.3",
     "jwks-rsa": "^1.11.0",
     "morgan": "~1.9.1",
+    "path": "^0.12.7",
     "pg": "^8.5.1",
     "uuid": "^8.3.1"
   },
