add firebase sdk web

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "classnames": "^2.2.6",
+    "firebase": "^9.0.2",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-big-calendar": "^0.31.0",
