add field for fb admin key

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,3 +10,4 @@ GOOGLE_CLIENT_ID = 'UPDATE_GOOGLE_CLIENT_ID'
 AUTH0_DOMAIN = 'UPDATE_AUTH0_DOMAIN'
 AUTH0_AUDIENCE='http://localhost:3000'
 CLIENT_ORIGIN_URL='https://localhost:3001'
+FIREBASE_ADMIN_KEY_PATH='path/to/serviceAccountKey.json'
