--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "express-jwt": "^6.0.0",
     "express-jwt-authz": "^2.4.1",
+    "firebase-admin": "^9.12.0",
     "google-auth-library": "^6.1.3",
     "http-errors": "~1.6.3",
     "jwks-rsa": "^1.11.0",
