--- a/client/.example.env
+++ b/client/.example.env
@@ -2,8 +2,10 @@ REACT_APP_GOOGLE_CLIENT_ID = 'UPDATE_GOOGLE_PROJECT_CLIENT_ID'
 AuthorizeURL = 'https://accounts.google.com/o/oauth2/v2/auth'
 TokenURL = 'https://www.googleapis.com/oauth2/v4/token'
 PORT = '3001'
-REACT_APP_AUTH0_DOMAIN = 'UPDATE_AUTH0_DOMAIN'
-REACT_APP_AUTH0_CLIENT_ID = 'UPDATE_AUTH0_CLIENT_ID'
-REACT_APP_AUTH0_AUDIENCE= 'UPDATE_BACKEND_SERVER_URL'
-REACT_APP_SERVER_URL= 'UPDATE_BACKEND_SERVER_URL'
+REACT_APP_FIREBASE_WEB_API_KEY = 'FROM_FIREBASE_SETUP'
+REACT_APP_FIREBASE_WEB_AUTH_DOMAIN = 'FROM_FIREBASE_SETUP'
+REACT_APP_FIREBASE_WEB_PROJECT_ID = 'FROM_FIREBASE_SETUP'
+REACT_APP_FIREBASE_WEB_STORAGE_BUCKET = 'FROM_FIREBASE_SETUP'
+REACT_APP_FIREBASE_WEB_MESSAGING_SENDER_ID = 'FROM_FIREBASE_SETUP'
+REACT_APP_FIREBASE_WEB_APP_ID = 'FROM_FIREBASE_SETUP'
 DISABLE_NEW_JSX_TRANSFORM=true
