--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-react": "^1.2.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -15,6 +14,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "classnames": "^2.2.6",
+    "firebase": "^9.0.2",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-big-calendar": "^0.31.0",
