--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,5 @@ PGPASSWORD='UPDATE_DB_PASSWORD'
 PGDATABASE='UPDATE_DB_NAME'
 PGPORT=5432
 PGMAXCONNECTIONS=5
-GOOGLE_CLIENT_ID = 'UPDATE_GOOGLE_CLIENT_ID'
-AUTH0_DOMAIN = 'UPDATE_AUTH0_DOMAIN'
-AUTH0_AUDIENCE='http://localhost:3000'
 CLIENT_ORIGIN_URL='https://localhost:3001'
+FIREBASE_ADMIN_KEY_PATH='path/to/serviceAccountKey.json'
